<resources>
    <string name="app_name">StatPerson</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="status">Status</string>
    <string name="admin">Administrator</string>
    <string name="user">User</string>
    <string name="sites">Sites:</string>
    <string name="stat">Statistic</string>
    <string name="total_stat">Total Statistic</string>
    <string name="daily_stat">Daily Statistic</string>
    <string name="date">Date</string>
    <string name="total">Total for period:</string>
    <string name="persons">Persons</string>
    <string name="person">Person: </string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="putin">Putin</string>
    <string name="medvedev">Medvedev</string>
    <string name="navalny">Navalny</string>
    <string name="key_words">Key words</string>
    <string name="users">Users</string>
    <string name="button_apply">Apply</string>
    <string name="period_from">Period from: </string>
    <string name="period_till">Period till: </string>

    <string name="fragment_persons">Choice person</string>
    <string name="fragment_sites">Choice site</string>
    <string name="fragment_status">Choice status</string>
    <string name="fragment_date">Choice date</string>
    <string name="choose_date">Choose date</string>
    <string name="ready">Ready</string>
    <string name="fragment_key_words">Choice key words</string>
    <string name="fragment_users">Choice users</string>

    <string name="site_name">Site: lenta.ru</string>
    <string name="admin_role">Enter as administrator</string>
    <string name="user_role">Enter as user</string>

    <string name="site_lenta">lenta.ru</string>
    <string name="site_test">test.ru</string>
    <string name="site_sample">sample.ru</string>

    <string name="from_less_till">Starting date should be less till</string>
    <string name="from_less_today">Starting date should be less today</string>
    <string name="till_less_today">Final date should be less today</string>
    <string name="from_less_initdate">Starting date should be more 2016, May 01</string>
    <string name="empty">List</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sure">Delete? Are you sure?</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_person">Add person</string>
    <string name="add_site">Add site</string>
    <string name="add_key_word">Add key word</string>
    <string name="login">Login</string>
    <string name="e_mail_pass">Enter your e-mail and password</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_pass">Enter password</string>
    <string name="enter">Enter</string>
    <string name="total_stat_graph">See graph</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
