<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/status"
            android:title="@string/status"/>
        <item
            android:id="@+id/sites"
            android:title="@string/sites"/>
        <item
            android:id="@+id/stat"
            android:title="@string/stat"/>
        <item
            android:id="@+id/persons"
            android:title="@string/persons"/>
    </group>

    <item android:title="@string/persons">
        <menu>
            <item
                android:id="@+id/putin"
                android:title="@string/putin"/>
            <item
                android:id="@+id/medvedev"
                android:title="@string/medvedev"/>
            <item
                android:id="@+id/navalny"
                android:title="@string/navalny"/>
        </menu>
    </item>

</menu>
