<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.proba.statperson.fragments.FragmentTotalStat">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewSiteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_name"
        android:padding="16dp"
        android:textSize="30sp"
        android:textColor="#03A9F4"/>
    <TextView
        android:id="@+id/textViewTotalStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@+id/textViewSiteName"
        android:text="@string/total_stat"
        android:textSize="20sp"
        android:textColor="#03A9F4"/>

    <TableLayout
        android:id="@+id/tableTotalStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_below="@+id/textViewTotalStat">

        <TableRow
            android:id="@+id/tableRowHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewName"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/textViewQuantity"
                android:text="@string/quantity"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewName1"
                android:text="@string/putin"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/textViewQuantity1"
                android:text="100500"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewName2"
                android:text="@string/medvedev"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/textViewQuantity2"
                android:text="50000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewName3"
                android:text="@string/navalny"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/textViewQuantity3"
                android:text="50000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif" >
            </TextView>
        </TableRow>

    </TableLayout>
</RelativeLayout>
