<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proba.statperson.view.user.DailyStatActivity">

    <TextView
        android:id="@+id/textViewDailyStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/daily_stat"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linearLayoutSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDailyStat"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/textViewSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSite"
            android:text="@string/sites"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewSiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSite"
            android:text="@string/fragment_sites"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPeriodFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutSite"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/textViewPeriodFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDateFrom"
            android:text="@string/period_from"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewDateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPeriodTill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutPeriodFrom"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/textViewPeriodTill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDateTill"
            android:text="@string/period_till"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewDateTill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutPeriodTill"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/textViewPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPerson"
            android:text="@string/person"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPerson"
            android:text="@string/fragment_persons"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

    </LinearLayout>

    <fragment
        android:id="@+id/DailyStatListFragment"
        android:layout_below="@+id/linearLayoutPerson"
        android:name="com.proba.statperson.view.user.fragments.DailyStatListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@android:layout/list_content">
    </fragment>

</RelativeLayout>
