<LinearLayout android:id="@+id/FragmentKeyWords"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.admin.fragments.FragmentKeyWords">


    <TextView
        android:id="@+id/textViewKeyWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/key_words"
        android:textColor="#03A9F4"
        android:textSize="@dimen/head_text">
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayoutPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textViewPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:textColor="#03A9F4"
            android:textSize="@dimen/normal_text"/>

        <TextView
            android:id="@+id/textViewPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_persons"
            android:textColor="#03A9F4"
            android:textSize="@dimen/normal_text"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/normal_text"
        android:choiceMode="multipleChoice">
    </ListView>

</LinearLayout>
