<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.proba.statperson.view.user.UserActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v4.widget.DrawerLayout>

    <TextView
        android:id="@+id/textViewTotalStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/total_stat"
        android:textSize="20sp"
        android:textColor="#03A9F4"/>

    <LinearLayout
        android:id="@+id/linearLayoutSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTotalStat"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/textViewSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sites"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewSiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sites"
            android:textColor="#03A9F4"
            android:textSize="20sp"/>

    </LinearLayout>

    <fragment
        android:id="@+id/totalStatListFragment"
        android:name="com.proba.statperson.view.user.fragments.TotalStatListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutSite"
        tools:layout="@android:layout/list_content">
    </fragment>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
